Fixing all issues find by Sonarqube