@@ -1,14 +1,12 @@
 package fitness_app_be.fitness_app.controllers.mapper;
 
 import fitness_app_be.fitness_app.controllers.dto.ExerciseDTO;
-import fitness_app_be.fitness_app.controllers.dto.WorkoutDTO;
 import fitness_app_be.fitness_app.domain.Exercise;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 @Component
 public class ExerciseMapper {
@@ -33,7 +31,7 @@ public class ExerciseMapper {
                 exerciseDTO.getWorkouts() != null
                         ? exerciseDTO.getWorkouts().stream()
                         .map(workoutMapper::toDomain)
-                        .collect(Collectors.toList())
+                        .toList()
                         : new ArrayList<>()
         );
     }
@@ -51,7 +49,7 @@ public class ExerciseMapper {
                 exercise.getWorkouts() != null
                         ? exercise.getWorkouts().stream()
                         .map(workoutMapper::domainToDto)
-                        .collect(Collectors.toList())
+                        .toList()
                         : new ArrayList<>()
         );
     }
