@@ -2,7 +2,7 @@ package fitness_app_be.fitness_app.persistence.repositories.impl;
 
 import fitness_app_be.fitness_app.domain.Exercise;
 import fitness_app_be.fitness_app.persistence.entity.ExerciseEntity;
-import fitness_app_be.fitness_app.persistence.jpaRepositories.JpaExerciseRepository;
+import fitness_app_be.fitness_app.persistence.jpa_repositories.JpaExerciseRepository;
 import fitness_app_be.fitness_app.persistence.mapper.ExerciseEntityMapper;
 import fitness_app_be.fitness_app.persistence.repositories.ExerciseRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class ExerciseRepositoryImpl implements ExerciseRepository {
@@ -33,7 +32,7 @@ public class ExerciseRepositoryImpl implements ExerciseRepository {
     public List<Exercise> getAll() {
         return jpaExerciseRepository.findAll().stream()
                 .map(exerciseEntityMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
